# freefs

./: Cargo.toml  build.rs
src/: datasource.rs  files.rs  inode.rs  inodetree.rs  keys_manager.rs  lib.rs  main.rs
src/proto/: keys.rs  keys_grpc.rs  mod.rs
