[package]
name = "freefs"
version = "0.1.0"
authors = ["ajbt200128 <austin@cutedogs.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = "0.22.3"
fuse = { git = "https://github.com/zargony/fuse-rs"}
libc = "0.2.69"
chrono = "0.4.11"
walkdir = "2.3.1"
async-trait = "0.1.31"
futures = "0.3.5"
tokio = "0.2.21"
cdc = "0.1.0"
blake3 = "0.3.3"
hex = "0.4.2"
grpcio = {path="../grpc-rs", features=["openssl"]}
protobuf = "2.14.0"


[build-dependencies]
protoc-grpcio = "1.0.2"

[patch.crates-io]
grpcio-compiler = { path = "../grpc-rs/compiler", version = "0.5.0", default-features = false }