[package]
name = "bbfs"
version = "0.1.0"
authors = ["ajbt200128 <austin@cutedogs.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = "0.22.3"
fuse = { git = "https://github.com/zargony/fuse-rs"}
libc = "0.2.69"
chrono = "0.4.11"
blake2 = "0.8.1"
walkdir = "2.3.1"
async-trait = "0.1.31"
futures = "0.3.5"
tokio = "0.2.21"
